sexy violin plot

--- a/git_fishes_student.Rmd
+++ b/git_fishes_student.Rmd
@@ -186,6 +186,9 @@ Now, lets create a new figure in the code block below that simplifies the one pr
 
 ```{r, collabFig, echo=TRUE, eval=TRUE}
 # You want to make changes to your collaborators figure in Task 5. Maybe you want to create a figure that focuses only on three fish species instead of the 5. More specifically, chromis, lemon, and acantho. Add code here to revise their figure to do that.
+
+data_clean %>% filter(species == "chromis"|species ==  "lemon"|species == "acantho") %>% ggplot(mapping = aes(x = species, y = activity, colour = treatment)) + geom_violin() + geom_jitter()
+
 ```
 
 
